--- a/public/css/style-contact.css
+++ b/public/css/style-contact.css
@@ -1,1 +1,97 @@
-.contact-form,.contact-title{box-sizing:border-box;display:flex}.contact-title,.warning{align-self:center;text-align:center}.contact-title{padding:.5%;margin:5px 0;font-family:Source Sans Pro,sans-serif;font-size:40px}.contact-form{flex-direction:column;border:3px solid #7577cd;padding:2%;margin:1%;border-radius:10px;background-color:#080957;align-self:center}.form-email,.form-message,.form-name,.form-submit,.form-surname{margin:1% 0;font-family:Roboto,sans-serif;font-weight:600;box-sizing:border-box}.form-email,.form-message,.form-name,.form-surname{background-color:#fff;border-radius:3px;border:2px solid #7577cd;padding:2%;font-size:24px;justify-content:flex-start}.form-cgu-label{box-sizing:border-box;font-family:Roboto,sans-serif;font-weight:600;color:#fff;justify-content:flex-start;padding:2% 0;font-size:20px}.form-cgu-label>a{color:#4eafe7}.form-submit{border-radius:3px;border:2px solid #7577cd;padding:2%;font-size:24px;cursor:pointer;text-decoration:none}.form-message{display:flex;flex:1;min-height:200px}.warning{box-sizing:border-box;padding:.5%;border-radius:10px;font-family:Source Sans Pro,sans-serif;font-size:28px;margin:3%;box-shadow:0 0 10px 5px #c5c5c5}@media only screen and (max-width:800px){.contact-title{font-size:32px;margin:15px 0}.warning{margin:30px 5px}}@media only screen and (max-width:400px){.warning{font-size:20px}}
+.contact-title {
+    display: flex;
+    box-sizing: border-box;
+    align-self: center;
+    text-align: center;
+    padding: 0.5%;
+    margin: 5px 0;
+    font-family: Source Sans Pro, sans-serif;
+    font-size: 40px;
+}
+
+.contact-form {
+    display: flex;
+    box-sizing: border-box;
+    flex-direction: column;
+    border: #7577cd solid 3px;
+    padding: 2%;
+    margin: 1%;
+    border-radius: 10px;
+    background-color: #080957;
+    align-self: center;
+}
+
+.form-name, .form-surname, .form-email, .form-message {
+    box-sizing: border-box;
+    background-color: white;
+    border-radius: 3px;
+    border: solid 2px #7577cd;
+    padding: 2%;
+    font-size: 24px;
+    margin: 1% 0;
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    justify-content: flex-start;
+}
+
+.form-cgu-label {
+    box-sizing: border-box;
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    color: white;
+    justify-content: flex-start;
+    padding: 2% 0;
+    font-size: 20px;
+}
+
+.form-cgu-label>a {
+    color: #4eafe7;
+}
+
+.form-submit {
+    box-sizing: border-box;
+    border-radius: 3px;
+    border: solid 2px #7577cd;
+    padding: 2%;
+    font-size: 24px;
+    cursor: pointer;
+    text-decoration: none;
+    margin: 1% 0;
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+}
+
+.form-message {
+    display: flex;
+    flex: 1;
+    min-height: 200px;
+}
+
+.warning {
+    box-sizing: border-box;
+    align-self: center;
+    padding: 0.5%;
+    border-radius: 10px;
+    font-family: Source Sans Pro, sans-serif;
+    font-size: 28px;
+    margin: 3%;
+    text-align: center;
+    box-shadow: 0 0 10px 5px #C5C5C5;
+}
+
+@media only screen and (max-width: 800px) {
+    .contact-title {
+        font-size: 32px;
+        margin: 15px 0;
+    }
+
+    .warning {
+        margin: 30px 5px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .warning {
+        font-size: 20px;
+    }
+}
