--- a/public/css/style-contact.css
+++ b/public/css/style-contact.css
@@ -15,10 +15,11 @@
     flex-direction: column;
     border: #7577cd solid 3px;
     padding: 2%;
-    margin: 1%;
+    margin: 1% 0;
     border-radius: 10px;
     background-color: #080957;
     align-self: center;
+    max-width: 100%;
 }
 
 .form-name, .form-surname, .form-email, .form-message {
